--- a/api_service/.env
+++ b/api_service/.env
@@ -1,7 +1,7 @@
-PORT=
-MYSQL_HOST=
-MYSQL_USER=
-MYSQL_PASSWORD=
-MYSQL_DATABASE=
+MYSQL_HOST="localhost"
+MYSQL_USER="root"
+MYSQL_PASSWORD=""
+MYSQL_DATABASE="sisTer_db"
+PORT=5000
 KAFKA_BROKER_HOST=
 KAFKA_TOPIC=
