--- a/api_service/package.json
+++ b/api_service/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "kafkajs": "^2.2.4",
+    "msgpack5": "^6.0.2",
     "mysql2": "^3.14.2",
     "uuid": "^11.1.0"
   },
